# Embedded_Trainer

./: README.md
From_0_to_1_Drill_Deep/: readme.md
From_0_to_1_Drill_Deep/Arrays/: passing_arrays_as_function_arguments.c
From_0_to_1_Drill_Deep/Bit_Manipulation/Bit_manipulation_examples/: extract_set_bit.c  reverse_bits_of_an_integer.c  reverse_bits_of_an_integer_explained.md
From_0_to_1_Drill_Deep/Bit_Manipulation/Extract_set_nth_bit/: count_1_in_bits_of_integer.c  print_bits_of_integer.c
From_0_to_1_Drill_Deep/LInked_Lists/: simple_linked_list_tools.c
From_0_to_1_Drill_Deep/Strings/: mystrcat.c  mystrchr.c  mystrcmp.c  mystrelen.c  mystrstr.c  pointers_as_arguments_to_functions.c  strings1.c
Learn_CPP_by_example/: readme.md
Learn_CPP_by_example/Cpp_casts/: const_cast.cpp  dynamic_cast.cpp
Learn_CPP_by_example/Introduction_to_cpp/: hello.cpp  scope_resolution_operator.cpp
Learn_CPP_by_example/Multiple_file_programs/: complex_number.cpp  complex_number.h  main.cpp
Learn_CPP_by_example/Objects_and_classes/: example_1.cpp  example_2.cpp  initialization_list.cpp
Learn_CPP_by_example/References/: example1.cpp  example2.cpp  multiple_references_to_same_var.cpp  reassignment_of_references.cpp  reference_to_int_ptr.cpp  return_reference_from_function.cpp  return_reference_to_stack_var.cpp
Learn_CPP_by_example/const/: basic_use.cpp  const_cast.cpp  const_char.cpp  const_function_arguments.cpp  const_member_functions.cpp  const_reference.cpp  mutable_member_variables.cpp  overloading_a_const_member_function.cpp
Learn_CPP_by_example/static/: const_static_member_variables_ver_1.cpp  const_static_member_variables_ver_1.h  const_static_member_variables_ver_2.cpp  const_static_member_variables_ver_2.h  static_member_functions.cpp  static_member_functions.h  static_member_variables.cpp  static_member_variables.h
Learn_CPP_by_example/templates/: basic_example_of_template.cpp  override_a_template_for_class  override_a_template_for_class.cpp  override_template_implementation_for_datatype.cpp
Multithreading_Thread_Synchronization_Pthreads/: readme.md
Multithreading_Thread_Synchronization_Pthreads/Dining_philosophers_problem/: dining_philosophers.c  dining_philosophers.h
Multithreading_Thread_Synchronization_Pthreads/Getting_started/: basic_threading.c  main_thread_termination.c  main_thread_termination_2.c  thread_termination_1.c  thread_termination_2.c
Multithreading_Thread_Synchronization_Pthreads/Joinable_and_detached_threads/: joinable_threads.c
Multithreading_Thread_Synchronization_Pthreads/Listener_threads/: listener_example.c  network_utils.c  network_utils.h  udp_sender.c
Multithreading_Thread_Synchronization_Pthreads/Notification_chains/: notification_chain_example.c  notification_chain_example_array.c  notification_chain_example_multiple_events.c  notification_chain_example_single_event.c
Multithreading_Thread_Synchronization_Pthreads/Semaphores/: example_sempahore.c  strict_alternation_problem.c
Multithreading_Thread_Synchronization_Pthreads/Semaphores_internal_implementations/: custom_semaphore.c  custom_semaphore.h
Multithreading_Thread_Synchronization_Pthreads/Spin_locks/: Theory.txt  example_using_mutex.c  example_using_spinlock.c
Multithreading_Thread_Synchronization_Pthreads/Thread_Barriers/: main.c  thread_barriers.c  thread_barriers.h
Multithreading_Thread_Synchronization_Pthreads/Thread_cancellation/: example_for_deferred_thread_cancellation.c  master_slave_1_asynchronous_cancel.c  master_slave_1_asynchronous_cancel_thread_cancellation_handle.c
Multithreading_Thread_Synchronization_Pthreads/Thread_synchronisation_condition_variables/: producer_consumer.c  queue.h
Multithreading_Thread_Synchronization_Pthreads/Thread_synchronisation_mutex/: mutex_example.c
Qt_6_Core_Beginners_CPP/: README.md
Qt_6_Core_Beginners_CPP/Basic_Qt_Classes/QObject_Class/: CMakeLists.txt  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp
Qt_6_Core_Beginners_CPP/Basic_Qt_Classes/Qt_int_classes/: CMakeLists.txt  main.cpp
Qt_6_Core_Beginners_CPP/Classes/Inheritance_in_Qt/: CMakeLists.txt  animal.cpp  animal.h  canine.cpp  canine.h  feline.cpp  feline.h  hybrid.cpp  hybrid.h  main.cpp
Qt_6_Core_Beginners_CPP/Classes/Override_methods_in_derived_class/: CMakeLists.txt  feline.cpp  feline.h  lion.cpp  lion.h  main.cpp
Qt_6_Core_Beginners_CPP/Dynamic_and_static_casting/: car.h  feline.h  main.cpp
Qt_6_Core_Beginners_CPP/First_Steps/HelloWorlds/: CMakeLists.txt  main.cpp
Qt_6_Core_Beginners_CPP/Pointers/Automatic_Memory_Management_with_Qt/: CMakeLists.txt  main.cpp  test.cpp  test.h
Qt_6_Core_Beginners_CPP/Pointers/QObject_Parent_Child_Relationship/: CMakeLists.txt  animal.cpp  animal.h  main.cpp  test.cpp  test.h
Qt_6_Core_Beginners_CPP/Pointers/QObject_cannot_be_copied/: CMakeLists.txt  main.cpp
Qt_6_Core_Beginners_CPP/QObject_cast/: CMakeLists.txt  car.cpp  main.cpp  racecar.cpp
Qt_6_Core_Beginners_CPP/Reinterpret_cast/Reinterpret_cast/: CMakeLists.txt  feline.cpp  main.cpp  racecar.h
Qt_6_Core_Beginners_CPP/Signals_and_Slots/Example_disconnecting/: CMakeLists.txt  main.cpp  radio.cpp  station.cpp  station.h
Qt_6_Core_Beginners_CPP/Signals_and_Slots/Qt_connection_type/: CMakeLists.txt  dog.cpp  dog.h  main.cpp  owner.cpp  owner.h
Qt_6_Core_Intermediate_CPP/: README.md
Qt_6_Core_Intermediate_CPP/Collections/QSharePointer_with_QMap/: CMakeLists.txt  main.cpp  test.cpp
Qt_6_Core_Intermediate_CPP/Collections/QSharedPointer_typedef_automanagement/: CMakeLists.txt  main.cpp  test.cpp  test.h
Qt_6_Core_Intermediate_CPP/Filesystem/QDataStream/: CMakeLists.txt  main.cpp
Qt_6_Core_Intermediate_CPP/Filesystem/QStorageInfo/: CMakeLists.txt  main.cpp
Qt_6_Core_Intermediate_CPP/Filesystem/Reading_large_files/: CMakeLists.txt  main.cpp
Qt_6_Core_Intermediate_CPP/Filesystem/navigating_recursively_file_systems/: CMakeLists.txt  main.cpp
Qt_6_Core_Intermediate_CPP/Memory_Management/Setting_parent_children_relationship/: CMakeLists.txt
Qt_6_Core_Intermediate_CPP/Settings/Setting_the_FileName/: CMakeLists.txt  main.cpp
(+224 files in other folders)
