cmake_minimum_required(VERSION 3.19)
project(HelloWorlds LANGUAGES CXX)

find_package(Qt6 6.5 REQUIRED COMPONENTS Core)

qt_standard_project_setup()

qt_add_executable(HelloWorlds
    main.cpp
)

target_link_libraries(HelloWorlds
    PRIVATE
        Qt::Core
)

include(GNUInstallDirs)

install(TARGETS HelloWorlds
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
